--- a/.slather.yml
+++ b/.slather.yml
@@ -1,4 +1,4 @@
 ci_service: travis_ci
 coverage_service: coveralls
-xcodeproj: Makeup.xcodeproj
+xcodeproj: Fashion.xcodeproj
 source_directory: Sources
