--- a/Fashion.xcodeproj/xcshareddata/xcschemes/Fashion-Mac.xcscheme
+++ b/Fashion.xcodeproj/xcshareddata/xcschemes/Fashion-Mac.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D5C629481C3A7FAA007F7B7C"
-               BuildableName = "Fashion.xctest"
+               BuildableName = "Fashion-Tests-Mac.xctest"
                BlueprintName = "Fashion-Mac-Tests"
                ReferencedContainer = "container:Fashion.xcodeproj">
             </BuildableReference>
